# library-org

./: .gitignore  Dockerfile  LIBRARY.md  README.md  controller.py  extract_data.py  fixture.py  library-org.wsgi  library.cfg_EXAMPLE  library.noisebridge.net  library.noisebridge.systems  mkdb.py  pyproject.toml  request_book.py  requirements.txt  runtime.txt  uwsgi.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
database/: README.md  books.sqlite  migration_000.sqlite  migration_001.sqlite
dataman/: .gitignore  howard_amazon_isbn.py  record_isbn_data.py
dataman/ORIGINAL_DATA/: FAILED_GOODREADS_ISBNS.MD  UNKNOWN_NUMBERS.md  UPC_NUMBERS.MD  isbn_response_data.020316.2343.json  requirements.txt
dataman/ORIGINAL_DATA/sourcedata/: barcodes.sqlite.bkp.120815.2336  isbn.pickle  olf.txt  openlibraryfails.pickle  unknown_numbers.pickle
dataman/UPDATE_DB_FOR_OLID/: books.20160529_030001.sqlite  get_isbns.py  isbn_response_data.json  isbns.pickle  record_isbn_data.py  requirements.txt
dataman/sourcedata/: barcodesep.py  upc.pickle
deployment/: library-org-backup_sh  library-org.ini  library.nginx
scripts/: setup-linux.sh  setup-mac.sh
static/: .gitignore  README.md  bower.json  gulpfile.js  package-lock.json  package.json
static/src/js/: stub.js
templates/: _formhelpers.html  all.html  base.html  detail.html  explore.html  index.html  new_book.html  new_isbn.html  new_location.html  new_manual.html  onesubject.html  sampleform.html  subjects.html  test.html
templates/sections/: bookdetailpage.html  footer.html  footerjs.html  head.html  header.html
(+6 files in other folders)
