[project]
name = "library-org"
version = "0.1.0"
description = "Organized data about the contents of a library"
readme = "README.md"
license = {file = "license.txt"}
requires-python = ">=3.13"
dependencies = [
    "flask==2.2.5",
    "flask-sqlalchemy>=2.5.1",
    "flask-wtf==0.15.1",
    "itsdangerous>=2.0",
    "jinja2>=3.0",
    "markupsafe>=2.1.1",
    "requests==2.31.0",
    "sqlalchemy>=2.0.0",
    "uwsgi==2.0.31",
    "werkzeug==2.3.8",
    "wtforms==2.3.3",
]
